feat(activity-log): add index controller function to ActivityLogController
