# routes/api.php
@@ -1,9 +1,12 @@
 <?php
 
+use App\Http\Controllers\ActivityLogController;
 use App\Http\Controllers\CategoryController;
 use App\Http\Controllers\PostController;
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 Route::resource('/category', CategoryController::class);
 Route::resource('/post', PostController::class);
+
+Route::get('/logs', [ActivityLogController::class, 'index']);
+Route::post('/logs/revert/{ActivityLog}', [ActivityLogController::class, 'revertToLogVersion']);
